# flashgui

./: .gitignore  CMakeLists.txt  README.md  flashgui.sln  vcpkg.json
cmake/: flashgui-config.cmake.in
dll_demo/: dll_demo.vcxproj  dll_demo.vcxproj.filters  dllmain.cpp  hooks.h  menu.cpp  menu.h  pch.h  present.cpp
exe_demo/: exe_demo.vcxproj  exe_demo.vcxproj.filters  pch.h  winmain.cpp
flashgui/: cpp.hint  dxgicontext.cpp  dxgicontext.h  flashgui.cpp  flashgui.vcxproj  flashgui.vcxproj.filters  fonts.cpp  fonts.h  frame_resource.hpp  framework.h  gui.cpp  gui.h  pch.h  procmanager.cpp  procmanager.h  pso_builder.hpp  renderer.cpp  renderer.h  root_sig_builder.hpp  shader_compiler.hpp  shader_loader.hpp  srv_allocator.hpp  vec2.h
flashgui/include/: flashgui.h
flashgui/shaders/: hlsl_to_c_files.bat  pixel.hlsl  quad_ps.c  quad_ps.cso  quad_ps.h  quad_vs.c  quad_vs.cso  quad_vs.h  vertex.hlsl
font_converter/: font_converter.vcxproj  main.cpp
hlsl flashgui/: shapes_ps.hlsl  shapes_vs.hlsl
injector_demo/: injector_demo.cpp  injector_demo.vcxproj  injector_demo.vcxproj.filters
ports/flashgui/: portfile.cmake  vcpkg.json
